--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpenAI Realtime Audio Chat</title>
+    <title>Realtime Audio Chat</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>🎤 OpenAI Realtime Audio Chat</h1>
-            <p>Press "Start Chat" to begin your audio conversation</p>
+            <h1>Realtime Audio Chat</h1>
         </header>
 
         <main>
@@ -46,7 +45,6 @@
         </main>
     </div>
 
-    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
